--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "lucide-react-native": "^0.279.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-actionsheet": "^2.4.2",
