--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -33,6 +33,7 @@
     "react-native-otp-inputs": "^7.4.0",
     "react-native-permissions": "^3.10.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
+    "react-native-razorpay": "^2.3.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-svg": "^13.13.0",
